<resources>
    <string name="app_name">My Page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_name">Enter Name</string>
    <string name="item_Qty">Enter Quantity</string>
    <string name="item_rate">Enter Rate</string>
    <string name="item_amount">Enter Amount</string>
    <string name="add_item">Add Item</string>
</resources>